# remote

./: .bazelrc  BUILD.bazel  Makefile  WORKSPACE  bazel.mk  go.mod
.github/workflows/: workflow.yml
